--- a/src/styles.css
+++ b/src/styles.css
@@ -72,26 +72,12 @@ body {
 }
 
 .pagination {
-  display: inline-block;
 }
 
-  .pagination a {
-    background-color: white;
+  .pagination button {
     float: left;
-    padding: 8px 16px;
-    text-decoration: none;
+    padding: 6px 12px;
     color: black;
-    border: 1px solid dimgray;
-  }
-
-  .pagination a.active {
-    background-color: var(--dark-color);
-    color: white;
-  }
-
-  .pagination a:hover:not(.active) {
-    background-color: dimgray;
-    color: white;
   }
 
 .account-form {
