--- a/src/app/pages/management/products/products.component.html
+++ b/src/app/pages/management/products/products.component.html
@@ -1,19 +1,19 @@
 <div class="main-container">
   <div class="row no-gutters" style="border: 1px solid dimgray; box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);">
-    <div class="col-12 col-sm-6 col-md-6">
+    <div class="col-12 col-sm-6 col-md-2">
       <h4>Products List</h4>
     </div>
-    <div class="col-6 col-md-2">
-      <div class="pagination">
-        <a (click)="leftPage()">&laquo;</a>
-        <a>{{this.params.PageNumber}}</a>
-        <a (click)="rightPage()">&raquo;</a>
+    <div class="col-6 col-md-6">
+      <div class="pagination ">
+        <button class="btn btn-outline-dark" style="border-radius: 0px;" (click)="leftPage()">&laquo;</button>
+        <button class="btn btn-outline-dark" style="border-radius: 0px;">{{this.params.PageNumber}}</button>
+        <button class="btn btn-outline-dark" style="border-radius: 0px;">{{this.params.PageNumber}}</button>
+        <button class="btn btn-outline-dark" style="border-radius: 0px;">{{this.params.PageNumber}}</button>
+        <button class="btn btn-outline-dark" style="border-radius: 0px;" (click)="rightPage()">&raquo;</button>
       </div>
     </div>
     <div class="col-6 col-md-2">
-      <button type="button" class="btn btn-outline-dark" style="border-radius: 0px;" data-toggle="modal" data-target="#addModal">
-        Add
-      </button>
+      <button type="button" class="btn btn-block btn-outline-dark" style="border-radius: 0px;" data-toggle="modal" data-target="#addModal">Add</button>
     </div>
     <div class="col-6 col-md-2">
       <button class="btn btn-block btn-outline-dark" style="border-radius: 0px;" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Filters</button>
