--- a/src/app/pages/management/providers/providers.component.html
+++ b/src/app/pages/management/providers/providers.component.html
@@ -12,23 +12,25 @@
       </div>
       <hr style="background-color: dimgray; height: 1px;" />
       
-      <div class="form-group">
-        <label class="col-form-label" style="font-weight: bold">Search</label>
-        <input class="form-control" style="border-radius: 0px;" type="search" id="search" (input)="search()" />
+      <div class="form-group row">
+        <label class="col-sm-4 col-form-label" style="font-weight: bold">Search</label>
+        <div class="col-sm-8">
+          <input class="form-control" style="border-radius: 0px;" type="search" id="search" (input)="search()" />
+        </div>
       </div>
       <hr style="background-color: dimgray; height: 1px;" />
-      
+
       <div class="form-group row">
-        <!--<app-pagination></app-pagination>-->
         <label class="col-sm-4 col-form-label" style="font-weight: bold">Pagination</label>
         <div class="col-sm-8">
-          <div class="pagination ">
+          <!--<div class="pagination ">
             <button class="btn btn-outline-dark" style="border-radius: 0px;" (click)="leftPage()">&laquo;</button>
             <button class="btn btn-outline-dark" style="border-radius: 0px;">{{this.params.PageNumber}}</button>
             <button class="btn btn-outline-dark" style="border-radius: 0px;">{{this.params.PageNumber}}</button>
             <button class="btn btn-outline-dark" style="border-radius: 0px;">{{this.params.PageNumber}}</button>
             <button class="btn btn-outline-dark" style="border-radius: 0px;" (click)="rightPage()">&raquo;</button>
-          </div>
+          </div>-->
+          <app-pagination (click)="this.sendQuery()"></app-pagination>
         </div> 
       </div>
     </div>
