--- a/src/app/pages/catalog/catalog-item-detail/catalog-item-detail.component.html
+++ b/src/app/pages/catalog/catalog-item-detail/catalog-item-detail.component.html
@@ -3,6 +3,7 @@
   <span>Description: {{prod.Description}}</span><br>
   <span>Provider: {{prod.Provider}}</span><br>
   <span>Category: {{prod.Category}}</span>
+  <span><img src="{{prod.ImagePath}}" alt="Product Image" ></span>
 </div>
 
 <ng-template #loading>
