--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,10 +1,34 @@
-<div *ngIf="userData | async as data; else loading">
-  <div><span>FirstName: {{data.FirstName}}</span><br>
-    <span>LastName: {{data.LastName}}</span><br>
-    <span>UserName: {{data.UserName}}</span><br>
-    <span>Email: {{data.Email}}</span><br>
-    <span>PhoneNumber: {{data.PhoneNumber}}</span>
-    <span><img src="{{data.ImagePath}}" alt="Profile Image" ></span>
+<div class="main-container" *ngIf="userData | async as data; else loading">
+  <div>
+    <h4>User Profile</h4>
+    <table>
+      <tr>
+        <td>
+          <div>
+            <img class="img-thumbnail" style="border: 4px solid dimgray;" src="{{data.imagePath}}" width="128" alt="Profile Image" />
+          </div>
+        </td>
+        <td style="vertical-align: top;">
+          <div style="margin-left: 10px;">
+            <p>
+              <b>FirstName:</b><span> {{data.firstName}}</span>
+            </p>
+            <p>
+              <b>LastName:</b><span> {{data.lastName}}</span>
+            </p>
+            <p>
+              <b>UserName:</b><span> {{data.userName}}</span>
+            </p>
+            <p>
+              <b>Email:</b><span> {{data.email}}</span>
+            </p>
+            <p>
+              <b>PhoneNumber:</b><span> {{data.phoneNumber}}</span>
+            </p>
+          </div>
+        </td>
+      </tr>
+    </table>
   </div>
   <button class="btn btn-outline-dark" style="border-radius: 0px;">Edit</button>
 </div>
