--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3 bg-white">
     <div class="container">
       <a class="navbar-brand" [routerLink]="['home']">
-        <img src="assets/img/logo.png" width="64" style="border: 1px; border-style: solid; border-color: dimgray" class="rounded-circle logo" alt="Home" />
+        <fa-icon [icon]="fahatcowvoy" class="КАЗАХ"></fa-icon>
       </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
