--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -27,7 +27,7 @@
                 <input type="button" value="Basket" class="btn btn-outline-dark" style="border-radius: 0px;" />
               </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" *ngIf="accountService.isClient();">
               <a class="nav-link" [routerLink]="['profile']">
                 <img src="assets/img/profiles/default.png" width="32" style="border: 1px; border-style: solid; border-color: dimgray" class="rounded-circle" alt="Profile">
               </a>
