--- a/src/app/pages/catalog/catalog-item-detail/catalog-item-detail.component.html
+++ b/src/app/pages/catalog/catalog-item-detail/catalog-item-detail.component.html
@@ -14,7 +14,8 @@
             <b>Category:</b><span> {{prod.Category}}</span><br />
             <b>Description:</b>
           </p>
-          <pre style="word-wrap: break-word; font-family: Arial, Helvetica, sans-serif">{{prod.Description}}</pre>  
+          <pre style="word-wrap: break-word; font-family: Arial, Helvetica, sans-serif">{{prod.Description}}</pre>
+          <button class="btn btn-outline-dark" style="border-radius: 0px;" (click)="this.addItemToBasket(prod.Id)">Add to basket</button>
         </div>
       </td>
     </tr>
