--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -30,7 +30,50 @@
       </tr>
     </table>
   </div>
-  <button class="btn btn-outline-dark" style="border-radius: 0px;">Edit</button>
+  <button class="btn btn-outline-dark" style="border-radius: 0px;" data-toggle="modal" data-target="#ValidateModal">Delete</button>
+</div>
+
+<div class="modal fade" id="ValidateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalCenterTitle">User Validation</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="deleteForm" (ngSubmit)="this.deleteUser()">
+          <div class="form-group" [ngClass]="{invalid: deleteForm.get('username')?.touched && deleteForm.get('username')?.invalid}">
+            <label class="col-form-label" style="font-weight: bold" for="username">UserName: </label>
+            <input class="form-control" style="border-radius: 0px;" id="username" type="text" formControlName="username">
+            <div class="validation" *ngIf="deleteForm.get('username')?.touched && deleteForm.get('username')?.invalid">
+              <small *ngIf="deleteForm.get('username')?.errors?.required">Enter username.</small>
+            </div>
+          </div>
+          <div class="form-group" [ngClass]="{invalid: deleteForm.get('password')?.touched && deleteForm.get('password')?.invalid}">
+            <label class="col-form-label" style="font-weight: bold" for="password">Password: </label>
+            <input class="form-control" style="border-radius: 0px;" id="password" type="text" formControlName="password">
+            <div class="validation" *ngIf="deleteForm.get('password')?.touched && deleteForm.get('password')?.invalid">
+              <small *ngIf="deleteForm.get('password')?.errors?.required">Enter password.</small>
+              <small *ngIf="deleteForm.get('password')?.errors?.minlength">
+                Password length must not be less than {{deleteForm.get('password')?.errors?.minlength.requiredLength}}.
+                Actual length is {{deleteForm.get('password')?.errors?.minlength.actualLength}}.
+              </small>
+            </div>
+          </div>
+          <div class="form-group">
+            <button type="submit" (click)="this.deleteUser()" class="btn btn-outline-dark" style="border-radius: 0px;" [disabled]="deleteForm?.invalid || submitted" data-dismiss="modal">Delete</button>
+            <button type="button" class="btn btn-outline-danger" style="border-radius: 0px;" data-dismiss="modal">Close</button>
+          </div>
+        </form>
+      </div>
+      <!--<div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>-->
+    </div>
+  </div>
 </div>
 
 <ng-template #loading>
