--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -31,6 +31,7 @@
     </table>
   </div>
   <button class="btn btn-outline-dark" style="border-radius: 0px;" data-toggle="modal" data-target="#ValidateModal">Delete</button>
+  <button class="btn btn-outline-dark" style="border-radius: 0px;" data-toggle="modal" data-target="#ChangePassModal">Change password</button>
 </div>
 
 <div class="modal fade" id="ValidateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -64,6 +65,53 @@
           </div>
           <div class="form-group">
             <button type="submit" (click)="this.deleteUser()" class="btn btn-outline-dark" style="border-radius: 0px;" [disabled]="deleteForm?.invalid || submitted" data-dismiss="modal">Delete</button>
+            <button type="button" class="btn btn-outline-danger" style="border-radius: 0px;" data-dismiss="modal">Close</button>
+          </div>
+        </form>
+      </div>
+      <!--<div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>-->
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="ChangePassModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalCenterTitle">Change Password</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="form" (ngSubmit)="this.changePassword()">
+          <div class="form-group" [ngClass]="{invalid: form.get('oldpass')?.touched && form.get('oldpass')?.invalid}">
+            <label class="col-form-label" style="font-weight: bold" for="oldpass">Old password: </label>
+            <input class="form-control" style="border-radius: 0px;" id="oldpass" type="text" formControlName="oldpass">
+            <div class="validation" *ngIf="form.get('oldpass')?.touched && form.get('oldpass')?.invalid">
+              <small *ngIf="form.get('oldpass')?.errors?.required">Enter password.</small>
+              <small *ngIf="form.get('oldpass')?.errors?.minlength">
+                Password length must not be less than {{form.get('oldpass')?.errors?.minlength.requiredLength}}.
+                Actual length is {{form.get('oldpass')?.errors?.minlength.actualLength}}.
+              </small>
+            </div>
+          </div>
+          <div class="form-group" [ngClass]="{invalid: form.get('newpass')?.touched && form.get('newpass')?.invalid}">
+            <label class="col-form-label" style="font-weight: bold" for="newpass">New password: </label>
+            <input class="form-control" style="border-radius: 0px;" id="newpass" type="text" formControlName="newpass">
+            <div class="validation" *ngIf="form.get('newpass')?.touched && form.get('newpass')?.invalid">
+              <small *ngIf="form.get('newpass')?.errors?.required">Enter password.</small>
+              <small *ngIf="form.get('newpass')?.errors?.minlength">
+                Password length must not be less than {{form.get('newpass')?.errors?.minlength.requiredLength}}.
+                Actual length is {{form.get('newpass')?.errors?.minlength.actualLength}}.
+              </small>
+            </div>
+          </div>
+          <div class="form-group">
+            <button type="submit" (click)="this.changePassword()" class="btn btn-outline-dark" style="border-radius: 0px;" [disabled]="form?.invalid || submitted" data-dismiss="modal">Change</button>
             <button type="button" class="btn btn-outline-danger" style="border-radius: 0px;" data-dismiss="modal">Close</button>
           </div>
         </form>
