--- a/src/app/pages/basket/basket.component.html
+++ b/src/app/pages/basket/basket.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let item of basketItems">
+<div>
   <table class="table table-bordered table-sm">
     <thead>
       <tr>
@@ -8,7 +8,7 @@
         <th>Operation</th>
       </tr>
     </thead>
-    <tbody>
+    <tbody *ngFor="let item of basketItems">
       <tr>
         <td>{{item.ProductName}}</td>
         <td>{{item.ProductCost}}</td>
