--- a/src/app/pages/catalog/catalog-item-detail/catalog-item-detail.component.html
+++ b/src/app/pages/catalog/catalog-item-detail/catalog-item-detail.component.html
@@ -16,7 +16,7 @@
           </p>
           <pre style="word-wrap: break-word; font-family: Arial, Helvetica, sans-serif">{{prod.Description}}</pre>
           <span *ngIf="accountService.isClient();">
-            <button class="btn btn-outline-dark" style="border-radius: 0px;" (click)="this.addItemToBasket(prod.Id)">Add to basket</button>
+            <button class="btn btn-outline-dark" style="border-radius: 0px;" (click)="this.addItemToBasket(prod)">Add to basket</button>
           </span>
         </div>
       </td>
