--- a/src/app/layouts/notification/notification.component.html
+++ b/src/app/layouts/notification/notification.component.html
@@ -1,8 +1,7 @@
 <div class="notification-panel">
     <div class="notification" *ngFor="let notice of notices">
         <img class="product-img" *ngIf="notice.product" src="{{notice.product.ImagePath}}" alt="imageProduct">
-        <p>{{notice.text}}</p>
-        <img class="notification-close" src="assets/img/cross.png" alt="close"
-            (click)="this.notices.splice(this.notices.indexOf(notice), 1);">
+        <span class="notice-text">{{notice.text}}</span>
+        <button class="btn btn-outline-dark notification-close" style="border-radius: 0px; background-color: gray;" (click)="this.notices.splice(this.notices.indexOf(notice), 1);">x</button>
     </div>
 </div>
