--- a/src/app/pages/catalog/catalog-item-detail/catalog-item-detail.component.html
+++ b/src/app/pages/catalog/catalog-item-detail/catalog-item-detail.component.html
@@ -3,7 +3,12 @@
     <tr>
       <td style="vertical-align: top;">
         <div>
-          <img class="img-thumbnail" style="border: 4px solid dimgray;" src="{{prod.ImagePath}}" width="256" alt="Preview Image" />
+          <span *ngIf="prod.ImagePath != undefined">
+            <img class="img-thumbnail" style="border: 4px solid dimgray;" src="{{prod.ImagePath}}" width="256" alt="Preview Image" />
+          </span>
+          <span *ngIf="prod.ImagePath == undefined">
+            <img class="img-thumbnail" style="border: 4px solid dimgray;" src="assets/img/profiles/default.png" width="256" alt="Preview Image" />
+          </span>
         </div>
       </td>
       <td style="vertical-align: top;">
