--- a/src/app/pages/catalog/catalog.component.html
+++ b/src/app/pages/catalog/catalog.component.html
@@ -57,7 +57,7 @@
     <div class="form-group row">
       <label class="col-sm-4 col-form-label" style="font-weight: bold">Pagination</label>
       <div class="col-sm-8">
-        <app-pagination (click)="this.sendQuery()"></app-pagination>
+        <app-pagination [metaData]="metaData" [isActive]="!isLoading" (changePage)="onPageChange($event)"></app-pagination>
       </div> 
     </div>
   </div>
