--- a/src/app/pages/management/categories/categories.component.html
+++ b/src/app/pages/management/categories/categories.component.html
@@ -23,14 +23,7 @@
       <div class="form-group row">
         <label class="col-sm-4 col-form-label" style="font-weight: bold">Pagination</label>
         <div class="col-sm-8">
-          <!--<div class="pagination ">
-            <button class="btn btn-outline-dark" style="border-radius: 0px;" (click)="leftPage()">&laquo;</button>
-            <button class="btn btn-outline-dark" style="border-radius: 0px;">{{this.params.PageNumber}}</button>
-            <button class="btn btn-outline-dark" style="border-radius: 0px;">{{this.params.PageNumber}}</button>
-            <button class="btn btn-outline-dark" style="border-radius: 0px;">{{this.params.PageNumber}}</button>
-            <button class="btn btn-outline-dark" style="border-radius: 0px;" (click)="rightPage()">&raquo;</button>
-          </div>-->
-          <app-pagination (click)="this.sendQuery()"></app-pagination> 
+          <app-pagination [metaData]="metaData" [isActive]="!isLoading" (changePage)="onPageChange($event)"></app-pagination>
         </div>
       </div>
     </div>
