--- a/src/app/shared/components/recaptcha/recaptcha.component.html
+++ b/src/app/shared/components/recaptcha/recaptcha.component.html
@@ -1,5 +1,6 @@
 <recaptcha 
     [size]="'invisible'"
     [hide]="false" 
-    (captchaResponse)="onCaptchaResponse($event)">
+    (captchaResponse)="onCaptchaResponse($event)"
+    >
 </recaptcha>
